--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,147 @@
+.contenedor{
+     
+    margin: 0 auto;
+     
+     
+    
+     
+}
+
+.title{
+    text-align: center;
+    color: rgb(97, 94, 94);
+    line-height: 1.2;
+    font-weight: 100;
+    border-bottom: 1px solid rgb(191, 189, 189);
+}
+.title-graficas{
+    text-align: center;
+}
+
+.title span{
+    text-transform: uppercase;
+      
+    font-weight: 900;
+    font-size: 38px;
+    color: white;
+  
+    
+    
+}
+
+.principal{
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+    gap: 2rem;
+    align-items: center;
+     
+}
+
+.bar{
+    max-width: 320px;
+    background-color: rgb(255, 255, 255, .8);
+     
+    margin: 0 auto;
+    border-radius: 15px;
+    padding: 10px;
+    
+}
+
+.formulario{
+    max-width:340px;
+     margin-left: 4px;
+      
+    
+}
+
  
+
+.saber-mas {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    color: white;
+
+}
+
+.saber-mas h2{
+    font-weight: 900;
+    font-size: 17px;
+    line-height: 1;
+    text-align: center;
+}
+
+.saber-mas p {
+    width: 100%;
+    font-weight: 100;
+    text-align: justify;
+    background-color: rgb(218, 215, 215, .1);
+    border-radius: 8px;
+    font-size: 12px;
+    color: white;
+     
+}
+ 
+.esperando{
+    text-align: center;
+
+}
+
+@media (min-width: 768px) {
+    .principal {
+         
+        justify-content: center;
+        gap: 1rem;
+    }
+
+    .formulario{
+         min-width: 400px;
+        margin: 0;         
+    }
+
+    .title{
+        width: 400px;
+        font-size: 35px;
+         margin: 0 auto;
+         padding-top: 40px;
+         line-height: 1.5;
+    }
+
+    .saber-mas h2 {
+        font-size: 24px;
+    }
+    .saber-mas p{
+        max-width: 700px;
+        font-size: 18px;
+        margin: 0 auto;
+        padding:3   0px 10px;
+    }
+        
+}
+
+@media (min-width: 1200px){
+    .principal {
+        display:flex;
+        justify-content:center ;
+        gap: 4rem;
+    }
+
+    .saber-mas p {
+        max-width: 1200px;
+        padding: 25px 10px;
+        font-size: 16px;
+        color: black;
+
+    }
+    .bar{
+       min-width: 400px;
+    }
+
+    .title{
+        margin-bottom: 20px;
+        margin-top: 10px;
+    }
+}
+
+
