--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 body{
-  background-color: rgb(25, 59, 87);
+  max-width: 100%;
+  background-image: url(./componentes/img/economia.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
 }
