--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,10 @@
 .contenedor{
-     
-    margin: 0 auto;
-     
-     
-    
-     
+    margin: 0 auto; 
 }
 
 .title{
     text-align: center;
-    color: rgb(97, 94, 94);
+    color: rgb(192, 192, 192);
     line-height: 1.2;
     font-weight: 100;
     border-bottom: 1px solid rgb(191, 189, 189);
@@ -50,8 +45,6 @@
 .formulario{
     max-width:340px;
      margin-left: 4px;
-      
-    
 }
 
  
@@ -60,7 +53,7 @@
     max-width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
+     
     color: white;
 
 }
@@ -78,7 +71,7 @@
     text-align: justify;
     background-color: rgb(218, 215, 215, .1);
     border-radius: 8px;
-    font-size: 12px;
+    font-size: 11px;
     color: white;
      
 }
@@ -106,6 +99,7 @@
          margin: 0 auto;
          padding-top: 40px;
          line-height: 1.5;
+         letter-spacing: 2px;
     }
 
     .saber-mas h2 {
@@ -115,23 +109,27 @@
         max-width: 700px;
         font-size: 18px;
         margin: 0 auto;
-        padding:3   0px 10px;
+        padding:0px 10px;
     }
+
+     
         
 }
 
-@media (min-width: 1200px){
+@media (min-width: 1280px){
     .principal {
         display:flex;
         justify-content:center ;
-        gap: 4rem;
+        gap: 2rem;
     }
+
+     
 
     .saber-mas p {
         max-width: 1200px;
-        padding: 25px 10px;
+        padding: 20px 10px;
         font-size: 16px;
-        color: black;
+        color: white;
 
     }
     .bar{
@@ -139,8 +137,9 @@
     }
 
     .title{
-        margin-bottom: 20px;
-        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-top:0;
+        letter-spacing: 4px;
     }
 }
 
