--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body{
   max-width: 100%;
-  background-image: url(./componentes/img/economia.jpeg);
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-image: linear-gradient(to bottom, black 20%, white 77%, black 10%);
+   
   font-family: "Lato", sans-serif;
   font-weight: 700;
+  
 }
