--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,8 @@
     
 }
 
+ 
+
 .principal{
     display: grid;
     grid-template-rows: repeat(2,1fr);
@@ -37,6 +39,7 @@
     background-color: rgb(255, 255, 255, .8);
      
     margin: 0 auto;
+    margin-bottom: 60px;
     border-radius: 15px;
     padding: 10px;
     
@@ -75,10 +78,23 @@
     color: white;
      
 }
- 
+.resultados{
+    margin-top: 0;
+    font-size: 25px;
+    margin-bottom: 30px;
+    background-color: rgb(78, 77, 77);
+    border: 1px solid black;
+    border-radius: 8px;
+}
+
 .esperando{
     text-align: center;
+    
+}
 
+.text-precio{
+    color: white;
+     
 }
 
 @media (min-width: 768px) {
@@ -86,12 +102,14 @@
          
         justify-content: center;
         gap: 1rem;
+        align-items: flex-start;
     }
 
     .formulario{
          min-width: 400px;
         margin: 0;         
     }
+    
 
     .title{
         width: 400px;
@@ -134,6 +152,7 @@
     }
     .bar{
        min-width: 400px;
+        
     }
 
     .title{
@@ -141,6 +160,16 @@
         margin-top:0;
         letter-spacing: 4px;
     }
+
+    .resultados{
+        padding: 40px 50px;
+        margin-top: 30px;
+    }
+
+     
+     
 }
+
+ 
 
 
