--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+body{
+    max-width: 100%;
+    background-image: linear-gradient(to bottom, black 20%, white 77%, black 10%);
+     
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
+    
+  }
+
 .contenedor{
     margin: 0 auto; 
 }
