--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body{
     max-width: 100%;
-    background-image: linear-gradient(to bottom, black 20%, white 77%, black 10%);
-     
+    /* background-image: linear-gradient(to bottom, black 20%, white 77%); */
+     background-color: black;
     font-family: "Lato", sans-serif;
     font-weight: 700;
     
